[package]
name = "solana-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spl-token = "3.3.0"
spl-associated-token-account = "1.1.1"
solana-program = "1.14.5"
thiserror = "1.0.37"
solana-program-test = "1.14.5"
solana-sdk = "1.14.5"
arrayref = "0.3.6"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]