[package]
name = "solana-helpers"
version = "0.1.2"
edition = "2021"
authors = ["ohaddahan@gmail.com"]
license = "MIT"
description = "Solana helpers"
keywords = ["solana"]
categories = ["cryptography"]
repository = "https://github.com/ohaddahan/solana-helpers.git"
documentation = "https://docs.rs/orca-sol/latest/solana-helpers"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spl-token = "8.0.0"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
spl-associated-token-account = "7.0.0"
solana-program = "2.3.0"
solana-address = "1.0.0"
thiserror = "2.0.15"
solana-program-test = "2.3.7"
solana-sdk = "2.3.1"
arrayref = "0.3.9"
num-bigint = "0.4.6"
sha2 = "0.10.9"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]